@@ -1,5 +1,9 @@
 Nova changelog
 ===============
+[B]v1.0.9[/B] - 2018-02-20
+ - Добавлено отображение размера раздач с Lostfilm.TV
+ - Поправлен поиск на CasStudio.tv
+
 [B]v1.0.8[/B] - 2018-02-20
  - Добавил CasStudio.TV
  - Удален kinozal.guru, kinozal.tv теперь требует авторизацию. 
